--- a/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <div class="navbar-collapse collapse" id="navbar">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a aria-expanded="false" role="button" asp-page="/Apontamento">Apontamentos</a>
+                                <a aria-expanded="false" role="button" asp-page="/Apontamento/Listar">Apontamentos</a>
                             </li>
                             <li>
                                 <a aria-expanded="false" role="button" asp-page="/FluxoTrabalho">Fluxo de Trabalho</a>
