--- a/src/Cpnucleo.Blazor.Server/Pages/Sistema/Incluir.razor
+++ b/src/Cpnucleo.Blazor.Server/Pages/Sistema/Incluir.razor
@@ -14,6 +14,8 @@
         </div>
         <div class="ibox-content">
             <EditForm Model="@model" OnValidSubmit="@OnValidSubmit" OnInvalidSubmit="@OnInvalidSubmit" class="form-horizontal">
+                <DataAnnotationsValidator />
+
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nome</label>
                     <div class="col-sm-10">
