--- a/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                 </nav>
             </div>
             <div class="wrapper wrapper-content">
-                <div class="container">
+                <div class="container-fluid">
                     @RenderBody()
                 </div>
             </div>
