--- a/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoFinalizadoPartial.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoFinalizadoPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cpnucleo.RazorPages.ViewModels.TarefaViewModel
+﻿@model Cpnucleo.RazorPages.Models.TarefaViewModel
 
 <li class="@Model.TipoTarefa.Element">
     @Model.Nome
