--- a/src/Cpnucleo.MVC/Views/Shared/_CardApontamentoFinalizadoPartial.cshtml
+++ b/src/Cpnucleo.MVC/Views/Shared/_CardApontamentoFinalizadoPartial.cshtml
@@ -3,7 +3,7 @@
 <li class="@Model.TipoTarefa.Element">
     @Model.Nome
     <div class="agile-detail">
-        <i class="fa fa-clock-o"></i> @Model.DataTermino.Value.ToString("dd/MM/yyyy")
+        <i class="fa fa-clock-o"></i> @Model.DataTermino.ToString("dd/MM/yyyy")
         <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@Model.Id criada por @Model.Recurso.Nome</div>
         @if (Model.HorasRestantes <= 0)
         {
