--- a/src/Cpnucleo.Blazor/Pages/Projeto/Alterar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Alterar.razor
@@ -5,7 +5,7 @@
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5>Alteração de Sistema</h5>
+            <h5>Alteração de Projeto</h5>
             <div class="ibox-tools">
                 <a class="fullscreen-link">
                     <i class="fa fa-expand"></i>
@@ -15,7 +15,7 @@
         <div class="ibox-content">
 
             <EditForm class="form-horizontal" Model="@model" OnValidSubmit="@HandleValidSubmit">
-                <DataAnnotationsValidator />     
+                <DataAnnotationsValidator />
 
                 @if (model.Id == Guid.Empty)
                 {
@@ -23,6 +23,13 @@
                 }
                 else
                 {
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Id)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.Id</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Nome</label>
                         <div class="col-sm-10">
@@ -32,21 +39,32 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Descrição</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.IdSistema)" /></label>
                         <div class="col-sm-10">
-                            <InputText class="form-control" @bind-Value="model.Descricao" />                        
-                            <ValidationMessage For="@(() => model.Descricao)" />
+                            <InputSelect class="form-control m-b" @bind-Value="model.IdSistema">
+                                @foreach (var item in sistemas)
+                                {
+                                    <option value="@item.Id">@item.Nome</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="@(() => model.IdSistema)" />
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.DataInclusao)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.DataInclusao.ToShortDateString()</p>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <a class="btn btn-white" role="button" href="/sistema/listar">Voltar</a>
+                            <a class="btn btn-white" role="button" href="/projeto/listar">Voltar</a>
                             <button class="btn btn-primary" type="submit">Alterar</button>
                         </div>
                     </div>
-                }        
-
+                }
             </EditForm>
         </div>
     </div>
@@ -56,17 +74,21 @@
     [Parameter]
     public Guid Id { get; set; }
 
-    private SistemaViewModel model = new SistemaViewModel();
+    private ProjetoViewModel model = new ProjetoViewModel();
+    private IEnumerable<SistemaViewModel> sistemas;
 
     protected override async Task OnInitializedAsync()
     {
-        model = await cpnucleoApiService.GetAsync<SistemaViewModel>("sistema", "", Id);
+        sistemas = await cpnucleoApiService.GetAsync<IEnumerable<SistemaViewModel>>("sistema", "");
+        model = await cpnucleoApiService.GetAsync<ProjetoViewModel>("projeto", "", Id);
     }
 
     private async Task HandleValidSubmit()
     {
-        await cpnucleoApiService.PutAsync("sistema", "", Id, model);
+        model.Sistema = sistemas.FirstOrDefault(x => x.Id == model.IdSistema);
 
-        navigationManager.NavigateTo("/sistema/listar");
+        await cpnucleoApiService.PutAsync("projeto", "", Id, model);
+
+        navigationManager.NavigateTo("/projeto/listar");
     }
 }
