--- a/src/Cpnucleo.Blazor/Pages/Projeto/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Incluir.razor
@@ -26,19 +26,19 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
-                            <InputText class="form-control" @bind-Value="model.Nome" />
+                            <InputText class="form-control" @bind-Value="model.Nome" placeholder="Nome" />
                             <ValidationMessage For="@(() => model.Nome)" />
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Sistema)" /></label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.IdSistema)" /></label>
                         <div class="col-sm-10">
                             <InputSelect class="form-control m-b" @bind-Value="model.IdSistema">
                                 @foreach (var item in sistemas)
-                                    {
+                                {
                                     <option value="@item.Id">@item.Nome</option>
-                                    }
+                                }
                             </InputSelect>
                             <ValidationMessage For="@(() => model.IdSistema)" />
                         </div>
@@ -64,6 +64,7 @@
     protected override async Task OnInitializedAsync()
     {
         sistemas = await cpnucleoApiService.GetAsync<IEnumerable<SistemaViewModel>>("sistema", "");
+        model.IdSistema = sistemas.FirstOrDefault().Id;
     }
 
     private async Task HandleValidSubmit()
