--- a/src/Cpnucleo.Blazor/Pages/Projeto/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Remover.razor
@@ -5,7 +5,7 @@
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5>Remoção de Sistema</h5>
+            <h5>Remoção de Projeto</h5>
             <div class="ibox-tools">
                 <a class="fullscreen-link">
                     <i class="fa fa-expand"></i>
@@ -15,7 +15,7 @@
         <div class="ibox-content">
 
             <EditForm class="form-horizontal" Model="@model" OnValidSubmit="@HandleValidSubmit">
-                <DataAnnotationsValidator />     
+                <DataAnnotationsValidator />
 
                 @if (model.Id == Guid.Empty)
                 {
@@ -24,28 +24,42 @@
                 else
                 {
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nome</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Id)" /></label>
                         <div class="col-sm-10">
-                            <input type="hidden" @bind-value="model.Nome">                            
+                            <p class="form-control-static">@model.Id</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
+                        <div class="col-sm-10">
+                            <input type="hidden" @bind-value="model.Nome">
                             <p class="form-control-static">@model.Nome</p>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Descrição</label>
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.IdSistema)" /></label>
                         <div class="col-sm-10">
-                            <input type="hidden" @bind-value="model.Descricao">                            
-                            <p class="form-control-static">@model.Descricao</p>
+                            <input type="hidden" @bind-value="model.IdSistema">
+                            <p class="form-control-static">@model.Sistema.Nome</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.DataInclusao)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.DataInclusao.ToShortDateString()</p>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <a class="btn btn-white" role="button" href="/sistema/listar">Voltar</a>                            
+                            <a class="btn btn-white" role="button" href="/projeto/listar">Voltar</a>
                             <button class="btn btn-primary" type="submit">Remover</button>
                         </div>
                     </div>
-                }        
+                }
 
             </EditForm>
         </div>
@@ -56,17 +70,17 @@
     [Parameter]
     public Guid Id { get; set; }
 
-    private SistemaViewModel model = new SistemaViewModel();
+    private ProjetoViewModel model = new ProjetoViewModel();
 
     protected override async Task OnInitializedAsync()
     {
-        model = await cpnucleoApiService.GetAsync<SistemaViewModel>("sistema", "", Id);
+        model = await cpnucleoApiService.GetAsync<ProjetoViewModel>("projeto", "", Id);
     }
 
     private async Task HandleValidSubmit()
     {
-        await cpnucleoApiService.DeleteAsync("sistema", "", Id);
+        await cpnucleoApiService.DeleteAsync("projeto", "", Id);
 
-        navigationManager.NavigateTo("/sistema/listar");
+        navigationManager.NavigateTo("/projeto/listar");
     }
 }
