--- a/src/Cpnucleo.Blazor/Pages/Sistema/Alterar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Alterar.razor
@@ -15,7 +15,7 @@
         <div class="ibox-content">
 
             <EditForm class="form-horizontal" Model="@model" OnValidSubmit="@HandleValidSubmit">
-                <DataAnnotationsValidator />     
+                <DataAnnotationsValidator />
 
                 @if (model.Id == Guid.Empty)
                 {
@@ -23,6 +23,13 @@
                 }
                 else
                 {
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Id)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.Id</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
@@ -34,8 +41,15 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
                         <div class="col-sm-10">
-                            <InputText class="form-control" @bind-Value="model.Descricao" />                        
+                            <InputText class="form-control" @bind-Value="model.Descricao" />
                             <ValidationMessage For="@(() => model.Descricao)" />
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.DataInclusao)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.DataInclusao.ToShortDateString()</p>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
@@ -45,7 +59,7 @@
                             <button class="btn btn-primary" type="submit">Alterar</button>
                         </div>
                     </div>
-                }        
+                }
 
             </EditForm>
         </div>
