--- a/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
@@ -15,7 +15,7 @@
         <div class="ibox-content">
 
             <EditForm class="form-horizontal" Model="@model" OnValidSubmit="@HandleValidSubmit">
-                <DataAnnotationsValidator />     
+                <DataAnnotationsValidator />
 
                 @if (model.Id == Guid.Empty)
                 {
@@ -24,9 +24,16 @@
                 else
                 {
                     <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Id)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.Id</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                         <div class="col-sm-10">
-                            <input type="hidden" @bind-value="model.Nome">                            
+                            <input type="hidden" @bind-value="model.Nome">
                             <p class="form-control-static">@model.Nome</p>
                         </div>
                     </div>
@@ -34,18 +41,25 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
                         <div class="col-sm-10">
-                            <input type="hidden" @bind-value="model.Descricao">                            
+                            <input type="hidden" @bind-value="model.Descricao">
                             <p class="form-control-static">@model.Descricao</p>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.DataInclusao)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.DataInclusao.ToShortDateString()</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <a class="btn btn-white" role="button" href="/sistema/listar">Voltar</a>                            
+                            <a class="btn btn-white" role="button" href="/sistema/listar">Voltar</a>
                             <button class="btn btn-primary" type="submit">Remover</button>
                         </div>
                     </div>
-                }        
+                }
 
             </EditForm>
         </div>
