--- a/src/Cpnucleo.Blazor/Pages/Projeto/Alterar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Alterar.razor
@@ -2,6 +2,8 @@
 @inject ICpnucleoApiService cpnucleoApiService;
 @inject NavigationManager navigationManager
 
+<PageTitle>CPN - Alteração de Projeto</PageTitle>
+
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
