--- a/src/Cpnucleo.Blazor/Pages/Projeto/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Incluir.razor
@@ -2,6 +2,8 @@
 @inject ICpnucleoApiService cpnucleoApiService;
 @inject NavigationManager navigationManager
 
+<PageTitle>CPN - Inclusão de Projeto</PageTitle>
+
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
@@ -37,12 +39,12 @@
                             <InputSelect class="form-control m-b" @bind-Value="model.IdSistema">
                                 @foreach (var item in sistemas)
                                 {
-                                    <option value="@item.Id">@item.Nome</option>
+                                <option value="@item.Id">@item.Nome</option>
                                 }
-                            </InputSelect>
-                            <ValidationMessage For="@(() => model.IdSistema)" />
-                        </div>
+                        </InputSelect>
+                        <ValidationMessage For="@(() => model.IdSistema)" />
                     </div>
+                </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
