--- a/src/Cpnucleo.Blazor/Pages/Projeto/Listar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Listar.razor
@@ -2,6 +2,8 @@
 @inject IJSRuntime JS;
 @inject ICpnucleoApiService cpnucleoApiService;
 
+<PageTitle>CPN - Relação de Projetos</PageTitle>
+
 <div class="row">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
