--- a/src/Cpnucleo.Blazor/Pages/Sistema/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Incluir.razor
@@ -2,7 +2,7 @@
 @inject ICpnucleoApiService cpnucleoApiService;
 @inject NavigationManager navigationManager;
 
-<PageTitle>Inclusão de Sistema</PageTitle>
+<PageTitle>CPN - Inclusão de Sistema</PageTitle>
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
@@ -17,10 +17,10 @@
         <div class="ibox-content">
 
             <EditForm class="form-horizontal" Model="@model" OnValidSubmit="@HandleValidSubmit">
-                <DataAnnotationsValidator />             
+                <DataAnnotationsValidator />
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nome</label>
+                    <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                     <div class="col-sm-10">
                         <InputText class="form-control" @bind-Value="model.Nome" />
                         <ValidationMessage For="@(() => model.Nome)" />
@@ -28,16 +28,16 @@
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Descrição</label>
+                    <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
                     <div class="col-sm-10">
-                        <InputText class="form-control" @bind-Value="model.Descricao" />                        
+                        <InputText class="form-control" @bind-Value="model.Descricao" />
                         <ValidationMessage For="@(() => model.Descricao)" />
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" href="/sistema/listar">Voltar</a>                                              
+                        <a class="btn btn-white" role="button" href="/sistema/listar">Voltar</a>
                         <button class="btn btn-primary" type="submit">Incluir</button>
                     </div>
                 </div>
