--- a/src/Cpnucleo.Blazor/Pages/Sistema/Listar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Listar.razor
@@ -1,9 +1,8 @@
 @page "/sistema/listar"
 @inject IJSRuntime JS;
 @inject ICpnucleoApiService cpnucleoApiService;
-@*@inject HttpClient Http*@
 
-<PageTitle>Relação de Sistemas</PageTitle>
+<PageTitle>CPN - Relação de Sistemas</PageTitle>
 
 <div class="row">
     <div class="col-lg-12">
@@ -30,10 +29,10 @@
                         <table class="table table-striped table-bordered table-hover table-datatable">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
-                                    <th>Nome</th>
-                                    <th>Descrição</th>
-                                    <th>Data de Inclusão</th>                                
+                                    <th><DisplayName For="@(() => sistema.Id)" /></th>
+                                    <th><DisplayName For="@(() => sistema.Nome)" /></th>
+                                    <th><DisplayName For="@(() => sistema.Descricao)" /></th>
+                                    <th><DisplayName For="@(() => sistema.DataInclusao)" /></th>
                                     @if (sistemas.Count() > 0)
                                     {
                                         <th class="no-sort"></th>
@@ -63,10 +62,10 @@
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <th>Id</th>
-                                    <th>Nome</th>
-                                    <th>Descrição</th>
-                                    <th>Data de Inclusão</th>                                
+                                    <th><DisplayName For="@(() => sistema.Id)" /></th>
+                                    <th><DisplayName For="@(() => sistema.Nome)" /></th>
+                                    <th><DisplayName For="@(() => sistema.Descricao)" /></th>
+                                    <th><DisplayName For="@(() => sistema.DataInclusao)" /></th>
                                     @if (sistemas.Count() > 0)
                                     {
                                         <th></th>
@@ -83,12 +82,12 @@
 </div>
 
 @code {
+    private SistemaViewModel sistema;
     private IEnumerable<SistemaViewModel> sistemas;
 
     protected override async Task OnInitializedAsync()
     {
         sistemas = await cpnucleoApiService.GetAsync<IEnumerable<SistemaViewModel>>("sistema", "");
-        //sistemas = await Http.GetFromJsonAsync<IEnumerable<Sistema>>("sistema");
 
         await JS.InvokeVoidAsync("dataTables", "Relação de Sistemas");
     }
