--- a/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
@@ -2,7 +2,7 @@
 @inject ICpnucleoApiService cpnucleoApiService;
 @inject NavigationManager navigationManager;
 
-<PageTitle>Remoção de Sistema</PageTitle>
+<PageTitle>CPN - Remoção de Sistema</PageTitle>
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
@@ -26,6 +26,13 @@
                 else
                 {
                     <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Id)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.Id</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label">Nome</label>
                         <div class="col-sm-10">
                             <input type="hidden" @bind-value="model.Nome">                            
@@ -38,6 +45,13 @@
                         <div class="col-sm-10">
                             <input type="hidden" @bind-value="model.Descricao">                            
                             <p class="form-control-static">@model.Descricao</p>
+                        </div>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.DataInclusao)" /></label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static">@model.DataInclusao.ToShortDateString()</p>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
